--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">p8</string>
-    <string name="title_activity_main">p8</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="fileprovider_authority">io.ionic.starter.fileprovider</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="app_name">fortune</string>
+    <string name="title_activity_main">fortune</string>
+    <string name="package_name">com.fate.opoint</string>
+    <string name="custom_url_scheme">com.fate.opoint</string>
 </resources>
